--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 project(vf2 LANGUAGES CXX)
-set(CMAKE_CXX_STANDARD 11)
+# set(CMAKE_CXX_STANDARD 14)
 
 add_executable(vf2 main.cpp)
